--- a/src/components/NewDashboard/Header/Searchbar/Searchbar.scss
+++ b/src/components/NewDashboard/Header/Searchbar/Searchbar.scss
@@ -28,7 +28,7 @@
   }
 
   &__input {
-    font-family: "Open sans";
+    font-family: "Open sans", sans-serif;
     font-size: inherit;
     color: white;
     transition: width 0.4s;
